--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -51,12 +51,12 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="dist/Lost In Fear-compressed.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.1.options]
 
@@ -259,7 +259,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="dist/Lost In Fear-compressed.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -270,7 +270,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
