--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -45,7 +45,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 name="Android"
 platform="Android"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
