--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,47 +1,5 @@
 [preset.0]
 
-name="Web"
-platform="Web"
-runnable=true
-advanced_options=true
-dedicated_server=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
-encryption_include_filters=""
-encryption_exclude_filters=""
-encrypt_pck=false
-encrypt_directory=false
-script_export_mode=2
-
-[preset.0.options]
-
-custom_template/debug=""
-custom_template/release=""
-variant/extensions_support=false
-variant/thread_support=false
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/export_icon=true
-html/custom_html_shell=""
-html/head_include=""
-html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
-html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
-progressive_web_app/ensure_cross_origin_isolation_headers=true
-progressive_web_app/offline_page=""
-progressive_web_app/display=1
-progressive_web_app/orientation=1
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
-
-[preset.1]
-
 name="Android"
 platform="Android"
 runnable=true
@@ -58,7 +16,7 @@ encrypt_pck=false
 encrypt_directory=false
 script_export_mode=1
 
-[preset.1.options]
+[preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -248,12 +206,12 @@ permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
 
-[preset.2]
+[preset.1]
 
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -266,7 +224,7 @@ encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
 
-[preset.2.options]
+[preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
@@ -287,8 +245,8 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Libra"
+application/product_name="Lost in Fear"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
